# django-callablefield

./: .gitignore  pyproject.toml  setup.cfg
django_callablefield/: admin.py  fields.py  hook.py  models.py  myhook.py
django_callablefield/migrations/: 0001_initial.py
testproject/: settings.py
