[tool.poetry]
name = "django-callablefield"
version = "0.1.0"
description = ""
authors = ["Ryan Hiebert <ryan@ryanhiebert.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-django = "^3.5"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
django-cmd = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
